--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,5 @@ pytz==2014.2
 six==1.6.1
 static==1.0.2
 ua-parser==0.3.4
+pylibmc==1.3.0
+# pylibmc necessary in requirements for heroku to bootstrap app with libmemcached
